# trumps-card-app

backend-microservices/: docker-compose.yaml
backend-microservices/authentication-service/: .gitignore  Cargo.toml  Dockerfile  rust-toolchain.toml
backend-microservices/authentication-service/src/: main.rs
frontend/trumps-frontend/: .gitignore  README.md  angular.json  package.json
frontend/trumps-frontend/src/: index.html
frontend/trumps-frontend/src/app/: app.component.spec.ts  app.component.ts
frontend/trumps-leptos/: Cargo.toml
