[package]
name = "authentication-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["headers", "http2", "macros", "multipart", "tracing", "ws"] }
axum-extra = "0.7.4"
hyper = { version = "0.14.26", features = ["full"] }
jsonwebtoken = "8.3.0"
once_cell = "1.17.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
